
2023-07-28  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: check for mousemask and mmask_t

2023-07-24  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: fix for resolving COBCRUN_NAME

2023-05-25  Chuck Haatvedt <chuck.haatvedt+cobol@gmail.com>

	* configure.ac: added test for HAVE_RESIZE_TERM function

2023-04-25  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: try to error on warnings during checks, cleanup of resulting
	  unexpected test failures
	* configure.ac: drop deprecated-non-prototype warning in clang
	* configure.ac: add LIBCOB_LIBS while checking for libraries
	* configure.ac: added check for HAVE_ATTRIBUTE_CONSTRUCTOR

2023-04-05  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: pass --enable-debug to autoconf generated files as
	  COB_ENABLE_DEBUG, currently used for running extra test cycles in
	  the test suite

2023-03-03  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: allow specification of XML2_CONFIG (only used if
	  pkg-config module libxml-2.0 is not available)
	* configure.ac: check all used headers of libxml-2.0,
	  warn user if not found
	* improve multiple header header check via AC_CHECK_HEADERS according
	  to docs (cJSON, json-c and curses)

2023-02-27  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: fixed duplicate note about JSON_C_C_FLAGS,
	  changed messages as per autoconf docs

2023-02-19  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: minor adjustment for bdb library lookup

2023-02-10  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: fixed adjusted hack for AIX 64bit OBJECT_MODE
	  and added 32bit pendant
	* configure.ac, NEWS: updated for 3.2rc-2

2023-02-09  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: : search for json-c header in its common
	  default directory json-c/json.h

2023-01-18  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac, NEWS, gnucobol.spec: updated for 3.2rc-1

2023-01-16  Simon Sobisch <simonsobisch@gnu.org>
