@@ -1,4 +1,8 @@
 
+2023-10-17  David Declerck <david.declerck@ocamlpro.com>
+
+	* configure.ac: add checks to allow using stdint.h and inttypes.h
+
 2023-07-28  Simon Sobisch <simonsobisch@gnu.org>
 
 	* configure.ac: check for mousemask and mmask_t
